Add some of our workflow guidelines to CONTRIBUTING.md. Ref #12